@@ -1,6 +1,7 @@
 mesa (22.1.0~rc5-1) UNRELEASED; urgency=medium
 
   * New upstream release candidate.
+  * rules: Fix enabling intel-nullhw, reorganize setting vulkan-layers.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Fri, 13 May 2022 11:05:04 +0300
 
